--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         <div class="timeline-heading">
                             <div class="embed-responsive embed-responsive-16by9">
 								<video width="320" height="240" controls>
-								  <source src="video/Video_2014-07-10_074719.mp4" type="video/mp4">
+								  <source src="https://awin.cs.nchu.edu.tw/~daniel/sport/video/Video_2014-07-10_074719.mp4" type="video/mp4">
 
 								  Your browser does not support the video tag.
 								</video>
@@ -155,7 +155,7 @@
                       <div class="timeline-heading">
                        <div class="embed-responsive embed-responsive-16by9">
                           <video width="320" height="240" controls>
-								  <source src="video/Video_2014-07-13_055916.mp4" type="video/mp4">
+								  <source src="https://awin.cs.nchu.edu.tw/~daniel/sport/video/Video_2014-07-13_055916.mp4" type="video/mp4">
 
 								  Your browser does not support the video tag.
 						  </video>
@@ -180,7 +180,7 @@
                         <!-- 16:9 aspect ratio -->
                        <div class="embed-responsive embed-responsive-16by9">
                           <video width="320" height="240" controls>
-								  <source src="video/Video_2014-07-14_054237.mp4" type="video/mp4">
+								  <source src="https://awin.cs.nchu.edu.tw/~daniel/sport/video/Video_2014-07-14_054237.mp4" type="video/mp4">
 
 								  Your browser does not support the video tag.
 						  </video>                       </div>
@@ -203,7 +203,7 @@
                         <!-- 16:9 aspect ratio -->
                        <div class="embed-responsive embed-responsive-16by9">
                           <video width="320" height="240" controls>
-								  <source src="video/Video_2014-07-09_1.mp4" type="video/mp4">
+								  <source src="https://awin.cs.nchu.edu.tw/~daniel/sport/video/Video_2014-07-09_1.mp4" type="video/mp4">
 
 								  Your browser does not support the video tag.
 						  </video>
@@ -227,7 +227,7 @@
                         <!-- 16:9 aspect ratio -->
                        <div class="embed-responsive embed-responsive-16by9">
                           <video width="320" height="240" controls>
-								  <source src="video/Video_2014-07-09_2.mp4" type="video/mp4">
+								  <source src="https://awin.cs.nchu.edu.tw/~daniel/sport/video/Video_2014-07-09_2.mp4" type="video/mp4">
 
 								  Your browser does not support the video tag.
 						  </video>                       </div>
@@ -250,7 +250,7 @@
                         <!-- 16:9 aspect ratio -->
                        <div class="embed-responsive embed-responsive-16by9">
                           <video width="320" height="240" controls>
-								  <source src="video/Video_2016-03-05.mp4" type="video/mp4">
+								  <source src="https://awin.cs.nchu.edu.tw/~daniel/sport/video/Video_2016-03-05.mp4" type="video/mp4">
 
 								  Your browser does not support the video tag.
 						  </video>
@@ -274,7 +274,7 @@
                         <!-- 16:9 aspect ratio -->
                        <div class="embed-responsive embed-responsive-16by9">
                           <video width="320" height="240" controls>
-								  <source src="video/Video_2016-03-06.mp4" type="video/mp4">
+								  <source src="https://awin.cs.nchu.edu.tw/~daniel/sport/video/Video_2016-03-06.mp4" type="video/mp4">
 
 								  Your browser does not support the video tag.
 						  </video>                       </div>
