--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 </script>
 <script>
- function resize() { parent.document.getElementsByTagName("iframe")[0].height=document.body.scrollHeight;  //將子頁面高度傳到父頁面框架} 
+ function resize() { parent.document.getElementsByTagName("iframe")[0].height=document.body.scrollHeight;} 
 </script> 
 
     </head>
