--- a/video.html
+++ b/video.html
@@ -75,7 +75,7 @@
 		<div class="col-md-10 col-md-offset-1">
 			<div class="blog-post">
 				<div class="embed-responsive embed-responsive-16by9">
-					<div id="jp_container_1" class="jp-video jp-video-360p" role="application" aria-label="media player">
+					<div id="jp_container_1" class="jp-video jp-video-360p embed-responsive-item" role="application" aria-label="media player">
 						<div class="jp-type-single">
 							<div id="jquery_jplayer_1" class="jp-jplayer">
 							</div>
