--- a/video.html
+++ b/video.html
@@ -75,7 +75,8 @@
 		<div class="col-md-10 col-md-offset-1">
 			<div class="blog-post">
 				<div class="embed-responsive embed-responsive-16by9">
-					<div id="jp_container_1" class="jp-video jp-video-360p embed-responsive-item" role="application" aria-label="media player">
+				     <div class="embed-responsive-item">
+					<div id="jp_container_1" class="jp-video jp-video-720p" role="application" aria-label="media player">
 						<div class="jp-type-single">
 							<div id="jquery_jplayer_1" class="jp-jplayer">
 							</div>
@@ -98,6 +99,7 @@
 							</div>
 						</div>
 					</div>
+				     </div>
 				</div>
 				<button id="normal_scroing" type="button" class="btn btn-info btn-lg" onclick="vedio_start()">開始評分</button>
 				<button id="skipping_scroing" type="button" class="btn btn-warning btn-lg hidden" onclick="vedio_scoring()">直接評分</button>
