--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                           <h2><a href="#">Slider post</a></h2>
                           <ul class="list-inline post-detail">
                               <li>by <a>awin</a></li>
-                              <li><i class="fa fa-calendar"></i> 1st july 2015</li>
+                              <li><i class="fa fa-calendar"></i> 9th july 2014</li>
                           </ul>
                           <p>國際足總世界盃（英語：FIFA World Cup），通常簡稱世界盃，是一項國家級男子足球隊之間的國際比賽，由世界足壇最高管理機構國際足球總會（FIFA）每四年舉辦一次，與奧運會交替進行，自1998年法國世界盃起，電視轉播觀眾人數達到40億人次，遠遠超過奧運會，成為世界上最受歡迎的體育盛會[1][2]。世界盃亦是世界足壇規模最大、最具影響力的賽事。1930年為世界盃的首屆比賽，冠軍是烏拉圭隊；1942年和1946年因為世界大戰而停辦。
 
@@ -131,18 +131,14 @@
                     <div class="timeline-panel wow animated fadeInUp">
                         <div class="timeline-heading">
                             <div class="embed-responsive embed-responsive-16by9">
-								<video width="320" height="240" controls>
-								  <source src="https://awin.cs.nchu.edu.tw/~daniel/sport/video/Video_2014-07-10_074719.mp4" type="video/mp4">
-
-								  Your browser does not support the video tag.
-								</video>
-							</div>
+			       <img class="img-responsive" src="img/Video_2014-07-10.png" alt="">
+			    </div>
                         </div>
                         <div class="timeline-body">
                             <h2><a>荷蘭 VS 阿根廷</a></h2>
                             <ul class="list-inline post-detail">
                                 <li>by <a>awin</a></li>
-                                <li><i class="fa fa-calendar"></i> 1st july 2015</li>
+                                <li><i class="fa fa-calendar"></i> 10st july 2014</li>
                             </ul>
                             <p>此為預覽頁面，請點選"進入評分"進到個影片的評分畫面。</p>
                             <a class="btn border-theme" href="video.html">進入評分</a>
@@ -154,11 +150,7 @@
                   <div class="timeline-panel wow animated fadeInUp">
                       <div class="timeline-heading">
                        <div class="embed-responsive embed-responsive-16by9">
-                          <video width="320" height="240" controls>
-								  <source src="https://awin.cs.nchu.edu.tw/~daniel/sport/video/Video_2014-07-13_055916.mp4" type="video/mp4">
-
-								  Your browser does not support the video tag.
-						  </video>
+                          <img class="img-responsive" src="img/Video_2014-07-10.png" alt="">
                        </div>
                       </div>
                       <div class="timeline-body">
@@ -179,17 +171,18 @@
                       <div class="timeline-heading">
                         <!-- 16:9 aspect ratio -->
                        <div class="embed-responsive embed-responsive-16by9">
-                          <video width="320" height="240" controls>
-								  <source src="https://awin.cs.nchu.edu.tw/~daniel/sport/video/Video_2014-07-14_054237.mp4" type="video/mp4">
+                          <video width="320" height="240" class="embed-responsive-item">
+				<source src="https://awin.cs.nchu.edu.tw/~daniel/sport/video/Video_2014-07-14_054237.mp4" type="video/mp4">
 
-								  Your browser does not support the video tag.
-						  </video>                       </div>
+					Your browser does not support the video tag.
+			   </video>                       
+		      </div>
                       </div>
                       <div class="timeline-body">
                           <h2><a>德國 VS 阿根廷</a></h2>
                           <ul class="list-inline post-detail">
                               <li>by <a>awin</a></li>
-                              <li><i class="fa fa-calendar"></i> 1st july 2015</li>
+                              <li><i class="fa fa-calendar"></i> 14th july 2014</li>
                           </ul>
                           <p>此為預覽頁面，請點選"進入評分"進到個影片的評分畫面。</p>
                           <a class="btn border-theme" href="video_3.html">進入評分</a>
@@ -202,18 +195,18 @@
                       <div class="timeline-heading">
                         <!-- 16:9 aspect ratio -->
                        <div class="embed-responsive embed-responsive-16by9">
-                          <video width="320" height="240" controls>
-								  <source src="https://awin.cs.nchu.edu.tw/~daniel/sport/video/Video_2014-07-09_1.mp4" type="video/mp4">
+                          <video width="320" height="240" class="embed-responsive-item">
+				<source src="https://awin.cs.nchu.edu.tw/~daniel/sport/video/Video_2014-07-09_1.mp4" type="video/mp4">
 
-								  Your browser does not support the video tag.
-						  </video>
+				Your browser does not support the video tag.
+			</video>
                        </div>
                       </div>
                       <div class="timeline-body">
                           <h2><a>巴西 VS 德國(上半場)</a></h2>
                           <ul class="list-inline post-detail">
                               <li>by <a href="video_0.html">awin</a></li>
-                              <li><i class="fa fa-calendar"></i> 1st july 2015</li>
+                              <li><i class="fa fa-calendar"></i> 9th july 2014</li>
                           </ul>
                           <p>此為預覽頁面，請點選"進入評分"進到個影片的評分畫面。</p>
                           <a class="btn border-theme" href="video_0_1.html">進入評分</a>
@@ -226,11 +219,12 @@
                       <div class="timeline-heading">
                         <!-- 16:9 aspect ratio -->
                        <div class="embed-responsive embed-responsive-16by9">
-                          <video width="320" height="240" controls>
-								  <source src="https://awin.cs.nchu.edu.tw/~daniel/sport/video/Video_2014-07-09_2.mp4" type="video/mp4">
+                          <video width="320" height="240" class="embed-responsive-item">
+				<source src="https://awin.cs.nchu.edu.tw/~daniel/sport/video/Video_2014-07-09_2.mp4" type="video/mp4">
 
-								  Your browser does not support the video tag.
-						  </video>                       </div>
+					 Your browser does not support the video tag.
+				 </video>                      
+			  </div>
                       </div>
                       <div class="timeline-body">
                           <h2><a>巴西 VS 德國(下半場)</a></h2>
@@ -249,11 +243,7 @@
                       <div class="timeline-heading">
                         <!-- 16:9 aspect ratio -->
                        <div class="embed-responsive embed-responsive-16by9">
-                          <video width="320" height="240" controls>
-								  <source src="https://awin.cs.nchu.edu.tw/~daniel/sport/video/Video_2016-03-05.mp4" type="video/mp4">
-
-								  Your browser does not support the video tag.
-						  </video>
+                          <img class="img-responsive" src="img/Video_2016-03-05.png" alt=""> 
                        </div>
                       </div>
                       <div class="timeline-body">
@@ -273,11 +263,8 @@
                       <div class="timeline-heading">
                         <!-- 16:9 aspect ratio -->
                        <div class="embed-responsive embed-responsive-16by9">
-                          <video width="320" height="240" controls>
-								  <source src="https://awin.cs.nchu.edu.tw/~daniel/sport/video/Video_2016-03-06.mp4" type="video/mp4">
-
-								  Your browser does not support the video tag.
-						  </video>                       </div>
+                          <img class="img-responsive" src="img/Video_2016-03-05.png" alt="">                     
+			</div>
                       </div>
                       <div class="timeline-body">
                           <h2><a>2016中職日職對抗賽 大阪巨蛋</a></h2>
