--- a/video.html
+++ b/video.html
@@ -76,7 +76,7 @@
 			<div class="blog-post">
 				<div class="embed-responsive embed-responsive-16by9">
 				     <div class="embed-responsive-item">
-					<div id="jp_container_1" class="jp-video jp-video-720p" role="application" aria-label="media player">
+					<div id="jp_container_1" class="jp-video jp-video-720p　videoWrapper" role="application" aria-label="media player">
 						<div class="jp-type-single">
 							<div id="jquery_jplayer_1" class="jp-jplayer">
 							</div>
