--- a/index.html
+++ b/index.html
@@ -63,9 +63,14 @@
                 <div class="row">
                     <div class="col-sm-8 col-sm-offset-2">
 
-                        <h1>Sports Sparking</h1>
-                	<p>
-                      提供FIFA 2014 總決賽及2016中日職棒對抗賽的重要鏡頭跟註釋
+                        <h1>Sports Sparking:On Semantic Annotation for Sports Video Highlights by Mining User Comments from Live Broadcast Social Network</h1>
+                        <a href="https://nightheronry.github.io/" target="_blank">Po-Fang Hsu</a><sup>*</sup>&nbsp;&nbsp;&nbsp;&nbsp;
+                        <a href="http://web.nchu.edu.tw/~yfan/" target="_blank">Yao-Chung Fan</a><sup>*</sup>&nbsp;&nbsp;&nbsp;&nbsp;
+                        <a href="https://dblp.org/pid/52/5308-2.html" target="_blank">Huan Chen</a><sup>*</sup>&nbsp;&nbsp;&nbsp;&nbsp;
+				<br><br>
+		      <p style="text-align:center;">
+                          <sup>*</sup>National Chung Hsing University
+                     </p>
                 	</p>
                     </div>
                 </div>
